# tendermint-like-consensus-and-p2p-system

./: Cargo.toml  README.md
src/: main.rs
src/consensus/: mod.rs  state.rs  types.rs  validator.rs
src/p2p/: message.rs  mod.rs  peer.rs  transport.rs
